--- a/workspace/conduit/web/index.html
+++ b/workspace/conduit/web/index.html
@@ -45,8 +45,8 @@
   </script>
   <script src="js/p5.min.js" type="application/javascript"></script>
   <script src="js/p5.sound.min.js" type="application/javascript">
-
   </script>
+  <script type="text/javascript" src="https://alcdn.msauth.net/browser/2.14.2/js/msal-browser.min.js"></script>
   <script
     src="https://cdn.jsdelivr.net/npm/microsoft-cognitiveservices-speech-sdk@latest/distrib/browser/microsoft.cognitiveservices.speech.sdk.bundle-min.js">
     </script>
