--- a/workspace/conduit/web/index.html
+++ b/workspace/conduit/web/index.html
@@ -168,25 +168,26 @@
       vis_switch = true;
       audioConfig = sdk.AudioConfig.fromDefaultMicrophoneInput();
       //var audioConfig = sdk.AudioConfig.fromStreamInput(audioStream = mic.stream);
-      try {//Could be a minor issue with not waiting for callback
-        console.log("Starting Timer")
-        var timerId = setInterval(
+      function refreshToken() {
+        try {
+          console.log("Refresh Token")
           getToken()
             .then(token => speechConfig = sdk.SpeechConfig.fromAuthorizationToken(token, serviceRegion))
             .then(
               recognizer = new sdk.SpeechRecognizer(speechConfig, audioConfig)
-            ),
-          8.5 * 60 * 1000
-        )
-      } catch (error) {
-        console.error(error)
+            )
+        } catch (error) {
+          console.error(error)
+        }
       }
       try {
         recognizer.recognizing = (s, e) => {
           console.log("INTERMEDIATE RESULT RECEIVED: " + `${e.result.text}`);
+          //postPhrase(e.result.text)
         };
         recognizer.recognized = (s, e) => {
           console.log("TEST", "FINAL RESULT RECEIVED: " + `${e.result.text}`);
+          console.log("TEST", "EVENT:" + `${e}`)
           //postPhrase(e)
         };
         recognizer.startContinuousRecognitionAsync(
@@ -209,7 +210,7 @@
         vis_switch = false;
         recognizer.stopContinuousRecognitionAsync();
         recognizer.close();
-        console.log("Stop");
+        // console.log("Stop");
       } catch (error) {
         console.error(error);
       }
