--- a/workspace/conduit/web/index.html
+++ b/workspace/conduit/web/index.html
@@ -44,8 +44,10 @@
     //var audioContext = new AudioContext({ sampleRate: 16000 });
   </script>
   <script src="js/p5.min.js" type="application/javascript"></script>
+  <script src="main.dart.js" type="application/javascript"></script>
   <script src="js/p5.sound.min.js" type="application/javascript">
   </script>
+  <script src="js/jsdiff.js"></script>
   <!-- <script type="text/javascript" src="https://alcdn.msauth.net/browser/2.14.2/js/msal-browser.min.js"></script> -->
   <script
     src="https://cdn.jsdelivr.net/npm/microsoft-cognitiveservices-speech-sdk@latest/distrib/browser/microsoft.cognitiveservices.speech.sdk.bundle-min.js">
@@ -177,7 +179,8 @@
         console.error(error)
       }
     }
-
+    var STM = ''
+    var NOW = ''
     function listenToVoice() {
 
       userStartAudio(); //P5 Audio
@@ -188,11 +191,16 @@
       try {
         recognizer.recognizing = (s, e) => {
           console.log("IRR: " + `${e.result.text}`);
-          //postPhrase(e.result.text)
+          NOW = e.result.text
+          console.log(diff(STM, NOW))
+          STM = NOW
+          fluxState()
+          postPhrase(NOW)
         };
         recognizer.recognized = (s, e) => {
           console.log("FRR: " + `${e.result.text}`);
-          //postPhrase(e)
+          STM = ''
+          postPhrase(e.result.text)
         };
         recognizer.startContinuousRecognitionAsync(
           //cb = postPhrase(e), // Callback
@@ -221,7 +229,7 @@
 
     }
   </script>
-  <script src="main.dart.js" type="application/javascript"></script>
+
   <div id="container" style="position:absolute; z-index: 100;text-align:center;"></div>
 </body>
 
