--- a/workspace/conduit/web/index.html
+++ b/workspace/conduit/web/index.html
@@ -176,9 +176,13 @@
         recognizer.recognizing = (s, e) => {
           console.log("IRR: " + `${e.result.text}`);
           NOW = e.result.text
-          console.log(diff(STM, NOW))
+          // diff(STM, NOW)
           STM = NOW
-          fluxState()
+          input  = diff(STM, NOW)
+          input.map(function(elem ) {
+            return Object.values(elem).toString()
+          })
+          fluxState(JSON.stringify(input))
         };
         recognizer.recognized = (s, e) => {
           console.log("FRR: " + `${e.result.text}`);
