State of the Art

--- a/corvox601/Index.html
+++ b/corvox601/Index.html
@@ -13,7 +13,7 @@
 
   <script>
     const app = new Obsidian({
-      title: `001 Corvox-601-Main`,
+      title: `001 Corvox-601-Main.md`,
       target: document.querySelector('#root')
     })
   </script>
