--- a/workspace/conduit/web/index.html
+++ b/workspace/conduit/web/index.html
@@ -152,8 +152,8 @@
       }
       )
     }
-    function login() {
-      window.location.href = "/login";
+    function logout() {
+      window.location.href = "/logout";
     }
     var recognizer;
     var speechConfig;
